changed alt text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section id="thework">      
 
 <div class="grid-container">
-  <div class="grid-item1"><img src="../images/Computer_Screen.png" alt="Girl in a jacket" style="width:75%";></div>
+  <div class="grid-item1"><img src="../images/Computer_Screen.png" alt="computer screen" style="width:75%";></div>
   <div class="grid-item2"><h2>Project Title</h2><p class="portfolio-text">the description of the project will go here.</p> <button>view case study
   </button>
   </div>
