Added flex container
container and properties

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
         <title>Home</title>
         <link rel="stylesheet" href="./CSS/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <div class="flex-container">
+          <div>Randi Hansen</div>
+          <div>Home</div>
+          <div>Work</div> 
+          <div>About</div>
+          <div>Resume</div>
+        </div>
         
 
     </head>
